# FinestVX

./: .envrc  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: DOC_00_Index.md  DOC_01_Core.md  DOC_02_Types.md  DOC_03_Architecture.md  DOC_04_Legislation.md  DOC_05_Errors.md  DOC_06_Testing.md  DOC_07_Persistence.md  DOC_08_Localization.md  DOC_09_Exports_Gateway.md  DOC_10_Validation.md  FTLLEXENGINE_INTEGRATION.md  PLUGIN_SYSTEM.md  README.md
scripts/: benchmark.sh  fuzz_hypofuzz.sh  fuzz_hypofuzz_repro.py  lint.sh  test.sh  validate_docs.py  validate_env.py  validate_pyi_sync.py  validate_version.py
src/finestvx/: __init__.py  __init__.pyi
src/finestvx/core/: __init__.py  _validators.py  enums.py  models.py  serialization.py  types.py  validation.py
src/finestvx/export/: __init__.py  ledger.xsd  service.py
src/finestvx/gateway/: __init__.py  service.py
src/finestvx/legislation/: __init__.py  protocols.py  registry.py  subinterpreters.py
src/finestvx/legislation/lv/: __init__.py  standard_2026.py
src/finestvx/legislation/lv/locales/en_us/: legislation.ftl
src/finestvx/legislation/lv/locales/lv-LV/: legislation.ftl
src/finestvx/localization/: __init__.py  parsing.py  service.py
src/finestvx/persistence/: __init__.py  backup.py  config.py  replica.py  schema.py  sql.py  store.py
src/finestvx/runtime/: __init__.py  multi_book.py  service.py
src/finestvx/validation/: __init__.py  reports.py  service.py
tests/: .pylintrc  conftest.py  mypy.ini  strategy_metrics.py  test_core_model_edges.py  test_core_models.py  test_core_models_property.py  test_core_serialization_edges.py  test_core_validation.py  test_export_service.py  test_gateway_service.py  test_init_module.py  test_legislation_lv_standard_2026.py  test_legislation_lv_standard_2026_integration.py  test_legislation_lv_standard_2026_property.py  test_legislation_protocols.py  test_legislation_protocols_property.py  test_legislation_registry.py  test_legislation_subinterpreters.py  test_localization_parsing.py  test_localization_service.py  test_localization_service_edges.py  test_localization_service_property.py  test_localized_parsing.py  test_persistence_config_property.py  test_persistence_replica.py  test_persistence_runtime_gateway_edges.py  test_persistence_sql.py  test_persistence_store.py  test_protocols_and_reports.py  test_runtime_multi_book.py  test_runtime_service.py  test_validation_reports.py  test_validation_service.py  test_validation_service_edges.py
tests/fuzz/: __init__.py  test_ledger_state_machine.py
tests/strategies/: __init__.py  accounting.py  config.py
tests/support/: __init__.py  book_factory.py
