[build-system]
requires = ["hatchling>=1.29.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
package = true

[project]
name = "finestvx"
version = "0.1.0"
description = "Headless, country-agnostic bookkeeping core engine"
readme = "README.md"
requires-python = ">=3.14,<3.15"
authors = [
    {name = "Ervins Strauhmanis"},
]
keywords = [
    "bookkeeping",
    "accounting",
    "ledger",
    "financial",
    "sqlite",
    "apsw",
    "localization",
    "fiscal",
    "audit",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Typing :: Typed",
]
dependencies = [
    "apsw>=3.51.2.0",
    "ftllexengine[babel]>=0.148.0",
    "lxml>=6.0.2,<7.0.0",
    "reportlab>=4.4.10,<5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "hypothesis>=6.151.9",
    "mypy>=1.19.1",
    "pylint>=4.0.5",
    "ruff>=0.15.5",
    "pytest-benchmark>=5.2.3",
    "pytest-xdist>=3.8.0",
    "pytest-sugar>=1.1.1",
    "hypofuzz>=25.11.1",
    "psutil>=7.2.2",
    "types-psutil>=7.2.2.20260130",
]

release = [
    "twine>=6.2.0",
]

[tool.hatch.build.targets.sdist]
only-include = [
    "/scripts",
    "/src",
    "/tests",
    "README.md",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/finestvx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "property: Property-based tests using Hypothesis",
    "slow: Slow-running tests",
    "survivability: Runtime survivability tests that detect crashes and hangs",
    "survivability_extreme: Extreme load survivability tests (manual execution only)",
    "hypofuzz: Continuous fuzzing targets for HypoFuzz framework",
    "hypothesis: Tests using Hypothesis property-based testing",
    "fuzz: Intensive fuzz tests (excluded from normal test runs)",
]

[tool.coverage.run]
source = ["src/finestvx"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 95.0
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
warn_return_any = false

[[tool.mypy.overrides]]
module = ["apsw", "lxml.*", "reportlab.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "ISC",
    "ICN",
    "PIE",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "RUF",
]
ignore = [
    "PLR0913",
    "PLR2004",
]

[tool.pylint.main]
py-version = "3.14"
ignore-paths = ["^tests/.*$"]
extension-pkg-allow-list = ["apsw", "lxml.etree"]

[tool.pylint.messages_control]
disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-lines",
    "too-many-positional-arguments",
    "protected-access",
    "fixme",
    "too-many-public-methods",
    "duplicate-code",
    "too-many-return-statements",
    "import-outside-toplevel",
    "cyclic-import",
    "unreachable",
    "assignment-from-no-return",
    "invalid-name",
    "unused-variable",
    "unused-argument",
    "line-too-long",
    "import-error",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 7
max-attributes = 10
max-locals = 20
max-branches = 20
max-nested-blocks = 6
