[build-system]
requires = ["hatchling>=1.29.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
package = true

[project]
name = "finestvx"
version = "0.5.0"
description = "Headless, country-agnostic bookkeeping core engine"
readme = "README.md"
requires-python = ">=3.14,<3.15"
authors = [
    {name = "Ervins Strauhmanis"},
]
keywords = [
    "bookkeeping",
    "accounting",
    "ledger",
    "financial",
    "sqlite",
    "apsw",
    "localization",
    "fiscal",
    "audit",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Typing :: Typed",
]
dependencies = [
    "apsw>=3.52.0.0",
    "ftllexengine[babel]>=0.153.0",
    "lxml>=6.0.2,<7.0.0",
    "reportlab>=4.4.10,<5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "hypothesis>=6.151.9",
    "mypy>=1.19.1",
    "ruff>=0.15.5",
    "pytest-benchmark>=5.2.3",
    "pytest-xdist>=3.8.0",
    "pytest-sugar>=1.1.1",
    "hypofuzz>=25.11.1",
    "psutil>=7.2.2",
    "types-psutil>=7.2.2.20260130",
]

release = [
    "twine>=6.2.0",
]

[tool.hatch.build.targets.sdist]
only-include = [
    "/scripts",
    "/src",
    "/tests",
    "README.md",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/finestvx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "property: Property-based tests using Hypothesis",
    "slow: Slow-running tests",
    "survivability: Runtime survivability tests that detect crashes and hangs",
    "survivability_extreme: Extreme load survivability tests (manual execution only)",
    "hypofuzz: Continuous fuzzing targets for HypoFuzz framework",
    "hypothesis: Tests using Hypothesis property-based testing",
    "fuzz: Intensive fuzz tests (excluded from normal test runs)",
]

[tool.coverage.run]
source = ["src/finestvx"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 95.0
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
warn_return_any = false

[[tool.mypy.overrides]]
module = ["apsw", "lxml.*", "reportlab.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
# select = ["ALL"] is the strictest posture: new Ruff rules automatically apply.
# Explicit ignore list below covers rules that are genuinely inapplicable to this project.
select = ["ALL"]
ignore = [
    # --- Docstring style (D / pydocstyle) ---
    # Project uses Google-style docstrings enforced by CLAUDE.md §2.3.
    # pydocstyle enforces numpy/sphinx conventions that conflict with Google-style.
    "D",

    # --- Formatter territory ---
    # Trailing commas (COM812) and single-line string concatenation (ISC001)
    # are formatter decisions. Not running ruff format.
    "COM812",
    "ISC001",

    # --- Annotation style (entire ANN family) ---
    # All argument and return annotations are enforced by mypy strict — redundant in Ruff.
    "ANN",

    # --- Exception style (conflicts with existing waivers) ---
    # TRY003: Long exception messages. Conflicts with EM (flake8-errmsg, already enabled).
    # TRY300: Return in try block; project uses early-return pattern intentionally.
    "TRY003",
    "TRY300",

    # --- Unused / inapplicable rule families ---
    "CPY",   # copyright notices — not applicable
    "INT",   # gettext i18n — not applicable
    "PD",    # pandas — not applicable
    "NPY",   # numpy — not applicable
    "DJ",    # django — not applicable
    "AIR",   # apache airflow — not applicable
    "ASYNC", # trio/anyio async — not applicable (PEP 734 subinterpreters handle isolation)
    "TD",    # TODO comments — tracked in GitHub issues, not inline
    "FIX",   # FIXME/TODO/HACK markers — same as TD

    # --- Already explicitly handled ---
    "PLR0913",  # Too many arguments — acceptable for configuration objects
    "PLR2004",  # Magic values — acceptable for SQL/financial protocol constants
]

[tool.ruff.lint.per-file-ignores]
# PRODUCTION CODE - Architectural patterns only (real bugs fixed separately)

# persistence/schema.py: PEP 750 template strings (`t"""..."""`); mypy misc suppression
# is file-level in the source; ERA001: schema comments document SQL intent
"src/finestvx/persistence/schema.py" = ["ERA001"]

# persistence/store.py: APSW is a C extension with incomplete stubs; SLF001 for
# internal APSW connection state access; C901 for WAL coordination complexity
"src/finestvx/persistence/store.py" = ["SLF001", "C901"]

# runtime/service.py: BLE001 — Future dispatch requires catching all exceptions to
# avoid killing the background write thread (see Known Waiver Registry)
"src/finestvx/runtime/service.py" = ["BLE001"]

# TESTS - Blanket waivers for all test files
# S101: assert is the standard pytest assertion mechanism; bandit S101 targets production code
# S108: /tmp paths in tests are intentional for temp fixture directories
# S110: try-except-pass catches expected failure paths without logging
# S310/S311/S603: security rules targeting production code; not applicable in controlled tests
# BLE001: broad-except used intentionally to test error isolation
# TRY301: raise-in-try is a natural pattern for test invariant guards
# FBT001/FBT002/FBT003: test helpers and Hypothesis strategies may use bool flags
# SLF001: integration and white-box tests verify internal state via private members
# TC001/TC002/TC003: tests do not need TYPE_CHECKING import optimization
# PGH003: bare type: ignore in tests where specific codes vary across Python versions
# T201: conftest.py and some test helpers print to stdout for diagnostics
# C901: shadow objects and test helpers mirror production dispatch
# E501: test docstrings and assertion messages may exceed 100 chars for clarity
# PERF401/PERF402: test loops are not performance-critical paths
"tests/**/*.py" = ["S101", "S108", "S110", "S310", "S311", "S603", "BLE001", "TRY301", "FBT001", "FBT002", "FBT003", "SLF001", "TC001", "TC002", "TC003", "PGH003", "T201", "C901", "E501", "PERF401", "PERF402"]

# SCRIPTS - Developer tooling
# T201: scripts output to terminal by design
# EXE001: shebang files; executability managed externally
# FBT001/FBT002/FBT003: script helpers use bool flags
# INP001: scripts/ is not a package
# S603: subprocess calls in dev scripts are developer-controlled
"scripts/**/*.py" = ["T201", "EXE001", "FBT001", "FBT002", "FBT003", "INP001", "C901", "BLE001", "S101", "S603", "TC001", "TC003", "PERF401"]
